--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,5 +1,5 @@
 name: assignment-test
-on:
+on: 
     push:
         tags-ignore:
             - '*'
@@ -10,8 +10,17 @@ jobs:
         container: cuaesd/aesd-autotest:unit-test
         runs-on: self-hosted
         steps:
-          - uses: actions/checkout@v2 
+          - uses: actions/checkout@v2
           - name: Checkout submodules
-            run: git submodule update --init --recursive
+            run : git submodule update --init --recursive
           - name: Run unit test
             run: ./unit-test.sh
+    full-test:
+        container: cuaesd/aesd-autotest:assignment3
+        runs-on: self-hosted
+        steps:
+          - uses: actions/checkout@v2
+          - name: Checkout submodules
+            run : git submodule update --init --recursive
+          - name: Run full test
+            run: ./full-test.sh
